--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.21.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "popper.js": "^1.16.0"
